<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ardeapps.sarjakuvalukija.InfoActivity"
    android:orientation="vertical" >

    <TextView android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:textStyle="bold" />
    <TextView android:text="@string/info_title_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:layout_marginBottom="10dp"/>

    <TextView android:text="@string/info_usage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:textStyle="bold" />
    <TextView android:text="@string/info_usage_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:layout_marginBottom="10dp"/>

    <TextView android:text="@string/info_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:textStyle="bold" />
    <TextView android:text="@string/info_data_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:layout_marginBottom="10dp"/>

    <TextView android:text="@string/info_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:textStyle="bold" />
    <TextView android:text="@string/info_feedback_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_google_play"
            android:layout_gravity="center" />

        <TextView android:text="@string/info_link_rate"
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:textColor="#FF000000"
            android:textStyle="bold" />
        <TextView android:text="@string/info_link_more"
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#FF000000"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView android:text="@string/info_version"
        android:id="@+id/version"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000" />
    <TextView android:text="@string/info_copyright"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF000000" />

</LinearLayout>
