<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCC7F"
    android:orientation="vertical"
    tools:context="com.ardeapps.mazespeedrun.HighscoreActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/personal"
        android:text="@string/personal_best_times"
        android:gravity="center"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/personal_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF3C9"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/position"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/personal_result"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_personal"
        android:divider="@null"
        android:dividerHeight="0dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alltime"
        android:text="@string/all_time_best_times"
        android:gravity="center"
        android:textSize="20sp" />
    <LinearLayout
        android:id="@+id/alltime_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF3C9"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/alltime_position"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/alltime_result"
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_alltime"
        android:divider="@null"
        android:dividerHeight="0dp" />
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_leaderboards"
        android:id="@+id/show_leaderboards_button"
        android:onClick="showLeaderboards"/>

    <LinearLayout android:id="@+id/sign_in_bar"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_why"
            android:layout_marginStart="10dp"
            android:textColor="#808080" />
    </LinearLayout>

    <LinearLayout android:id="@+id/sign_out_bar"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:orientation="horizontal"
        android:gravity="center|end"
        android:padding="10dp">

        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/you_are_signed_in"
            android:layout_marginEnd="10dp"
            android:textColor="#808080" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
